added cooking post

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- add this line to every post:
+            <a href="https://blog.aadilali.com"><div style="width: 100%"><img src="./home.svg" style = "float: right"/></div></a>
+        -->
         <title>Aadil Ali</title>
         <meta charset = "utf-8">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161473364-2"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-161473364-2');
+        </script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
@@ -13,15 +24,13 @@
                     <br></br>
                     <p>
 						My favourites are <a class = "text-info" href = "posts/make-a-free-blog.html">How to make a blog for free with no code</a> and <a class = "text-info" href = "Blog/unicorn-person.html">How to be a Unicorn Person</a>.<br></br>
-						<li><a class = "text-info" href = "posts/make-a-free-blog.html">How to make a blog for free with no code</a><br></li>
+                        <li><a class = "text-info" href = "posts/make-a-free-blog.html">How to make a blog for free with no code</a><br></li>
 						<li><a class = "text-info" href = "posts/dropshipping-guide.html">A pretty good guide for dropshipping on Shopify</a><br></li>
 						<li><a class = "text-info" href = "posts/my-uni-apps.html">Open-sourcing my applications to Canadian universities (2020 admissions cycle)</a><br></li>
 						<li><a class = "text-info" href = "posts/unicorn-person.html">How to be a Unicorn Person</a><br></li>
 						<li><a class = "text-info" href = "posts/music-break.html">Why I’m taking a 30 day break from music</a><br></li>
 						<li><a class = "text-info" href = "posts/box-checker.html">Don’t spend your life being a box-checker</a><br></li>
 						<li><a class = "text-info" href = "posts/happyness-epicurus.html">The Pursuit of Happyness — Starring: Epicurus (and Jaden Smith)</a><br></li>
-						<li><a class = "text-info" href = "posts/you-decide.html">You decide</a></li>
-
 					</p>
 				</div>
 				<div class = "col-4"></div>
