--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <div class = "col-1">
                 <br></br>
                     <p>
+                        <a href = "https://aadilali.com">Blog</a>
                         <a href = "https://blog.aadilali.com">Blog</a>
                         <a href = "https://aadilali.us19.list-manage.com/subscribe?u=b1a0190d700080e749848161b&id=75ee2a93f6">Newsletter</a>
                         <a href = "https://www.instapaper.com/p/7166352">Instapaper</a>
