--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         <a href = "https://www.instapaper.com/p/7166352">Instapaper</a>
                         <a href = "https://www.notion.so/aadillpickle/14f3beadab624249a9b258d4a1f6f141?v=f4ac0458ca0748a49fe29cefbfbb8a2d">Books</a>
                         <a href = "https://www.notion.so/aadillpickle/Failure-Resume-e4cdc2d7ce204821af7bf9a683acaa33">Failure</a>
-						<a href = "https://www.notion.so/aadillpickle/Food-45f7d7ca2a324dc28a3bdd4332de9c1c">Toronto Guide (WIP)</a>
+                        <a href = "https://blog.aadilali.com/posts/cooking.html">Cooking</a>
+						<!--<a href = "https://www.notion.so/aadillpickle/Food-45f7d7ca2a324dc28a3bdd4332de9c1c">Toronto Guide (WIP)</a> -->
 						<a href = "https://www.buymeacoffee.com/aadillpickle">Buy me a coffee</a>
                     </p>
                 </div>
