--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <div class = "col-7">
                     <br></br>
                     <p>
-						My favourites are <a class = "text-info" href = "posts/make-a-free-blog.html">How to make a blog for free with no code</a> and <a class = "text-info" href = "Blog/unicorn-person.html">How to be a Unicorn Person</a>.<br></br>
+						My favourites are <a class = "text-info" href = "posts/make-a-free-blog.html">How to make a blog for free with no code</a> and <a class = "text-info" href = "posts/busy.html">On Being Busy</a>.<br></br>
+                        <li><a class = "text-info" href = "posts/busy.html">On Being Busy</a><br></li>
                         <li><a class = "text-info" href = "posts/personal-finance.html">Every thought about personal finance I've ever had, as concisely as possible</a><br></li>
                         <li><a class = "text-info" href = "posts/make-a-free-blog.html">How to make a blog for free with no code</a><br></li>
 						<li><a class = "text-info" href = "posts/dropshipping-guide.html">A pretty good guide for dropshipping on Shopify</a><br></li>
