remove old posts

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 						<li><a class = "text-info" href = "posts/my-uni-apps.html">Open-sourcing my applications to Canadian universities (2020 admissions cycle)</a><br></li>
 						<li><a class = "text-info" href = "posts/unicorn-person.html">How to be a Unicorn Person</a><br></li>
 						<li><a class = "text-info" href = "posts/music-break.html">Why I’m taking a 30 day break from music</a><br></li>
-						<li><a class = "text-info" href = "posts/box-checker.html">Don’t spend your life being a box-checker</a><br></li>
-						<li><a class = "text-info" href = "posts/happyness-epicurus.html">The Pursuit of Happyness — Starring: Epicurus (and Jaden Smith)</a><br></li>
+						<!-- <li><a class = "text-info" href = "posts/box-checker.html">Don’t spend your life being a box-checker</a><br></li>
+						<li><a class = "text-info" href = "posts/happyness-epicurus.html">The Pursuit of Happyness — Starring: Epicurus (and Jaden Smith)</a><br></li> -->
 					</p>
 				</div>
 				<div class = "col-4"></div>
